kubernetes/plex/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      restartPolicy: Always
      containers:
        - name: plex
          image: plexinc/pms-docker
          imagePullPolicy: Always
          volumeMounts:
            - name: plex-config
              mountPath: /config
            - name: plex-series
              mountPath: /series
            - name: plex-movies
              mountPath: /movies
            - name: plex-pictures
              mountPath: /pictures
          ports:
            - containerPort: 32400
            - containerPort: 1900
            - containerPort: 32469
            - containerPort: 32410
            - containerPort: 32412
            - containerPort: 32413
            - containerPort: 32414
      volumes:
        - name: plex-config
          hostPath:
            path: /home/thelegend27/homeserver/plex/database
        - name: plex-movies
          hostPath:
            path: /mnt/media/movies
        - name: plex-pictures
          hostPath:
            path: /mnt/media/pictures
        - name: plex-series
          hostPath:
            path: /mnt/media/series
