kubernetes/plex/plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  type: ClusterIP
  selector:
    app: plex
  ports:
    - port: 32400
      name: http
    - port: 1900
      name: dlna-udp
    - port: 32469
      name: dlna-tcp
    - port: 32410
      name: gdm-1
    - port: 32412
      name: gdm-2
    - port: 32413
      name: gdm-3
    - port: 32414
      name: gdm-4
